# user-interview-mvp

./: .env.example  .gitignore  CLAUDE.md  README.md  SYSTEM_DESIGN.md  drizzle.config.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
desktop/: README.md
desktop/installer/: Build-SignedInstaller.ps1  README.md  build-iexpress.ps1  foundry-overlay.iss  install-notetaker.cmd
desktop/macos/: .gitignore  Package.swift  README.md
desktop/native/: CMakeLists.txt
desktop/native/assets/: end_session.html  session_picker.html  settings.html
desktop/native/scripts/: Sign-Dev.ps1
desktop/native/src/common/: app_state.h  json_util.cpp  json_util.h
desktop/native/src/windows/: app_paths.cpp  app_paths.h  main.cpp
desktop/native/src/windows/audio/: audio_capture.cpp  audio_capture.h
desktop/native/src/windows/http/: http_client.cpp  http_client.h  sse_client.cpp  sse_client.h  websocket_client.cpp  websocket_client.h
desktop/native/src/windows/overlay/: renderer.cpp  renderer.h  window.cpp  window.h
desktop/native/src/windows/tray/: tray.cpp  tray.h
desktop/native/src/windows/webview/: webview_window.cpp  webview_window.h
docs/: AI_COST_AUDIT.md  API_FLOW_AUDIT.md  BACKEND_ENDPOINT_AUDIT.md  CLIENT_BOUNDARY_AUDIT.md  CONTRACT_AUDIT.md  DB_SCHEMA_AUDIT.md  DESKTOP_APP_AUDIT.md  INVENTORY.md  PERF_AUDIT.md  notetaker-architecture.md  onboarding-spec.md  realtime-auto-cross-off.md  transcript-provider-roadmap.md
drizzle/: 0000_redundant_gauntlet.sql  0002_cheerful_mauler.sql  0003_people_ttl_depth.sql  0004_crm_tables.sql  0005_call_prep.sql  0006_current_row_guards.sql  0007_drop_outreach_channel.sql  0008_query_indexes.sql  0009_project_type.sql  0010_discovered_urls.sql  0011_outreach_match_system.sql  0012_insight_content.sql  0013_outreach_projects.sql  0014_live_call_sessions.sql  0015_people_idea_validation_project.sql  0015_people_information_discovery_project.sql  0016_interview_outreach_project_scope.sql  0017_idea_validation_rename.sql  0018_global_people.sql  0019_enhanced_interview_review.sql  0020_guest_onboarding.sql  0021_live_call_sessions_desktop_audio_default.sql  0022_drop_zoom_rtms.sql
scripts/: migrate.ts  move-people.ts
src/: instrumentation.ts  middleware.ts  proxy.ts
src/lib/: api.ts  (+65 more)
(+389 files in other folders)
